; ModuleID = '/home/carl/AnghaBench/systemd/src/udev/extr_udev-event.c_udev_event_on_move.c'
source_filename = "/home/carl/AnghaBench/systemd/src/udev/extr_udev-event.c_udev_event_on_move.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* }

@.str = private unnamed_addr constant [69 x i8] c"Failed to copy properties from cloned sd_device object, ignoring: %m\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"ID_RENAMING\00", align 1
@.str.2 = private unnamed_addr constant [44 x i8] c"Failed to remove 'ID_RENAMING' property: %m\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @udev_event_on_move to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @udev_event_on_move(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  store i32* %8, i32** %4, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %30

13:                                               ; preds = %1
  %14 = load i32*, i32** %4, align 8
  %15 = call i64 @sd_device_get_devnum(i32* %14, i32* null)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %30

17:                                               ; preds = %13
  %18 = load i32*, i32** %4, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @device_copy_properties(i32* %18, i32 %21)
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %17
  %26 = load i32*, i32** %4, align 8
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @log_device_debug_errno(i32* %26, i32 %27, i8* getelementptr inbounds ([69 x i8], [69 x i8]* @.str, i64 0, i64 0))
  br label %29

29:                                               ; preds = %25, %17
  br label %30

30:                                               ; preds = %29, %13, %1
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @device_add_property(i32* %31, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32* null)
  store i32 %32, i32* %5, align 4
  %33 = load i32, i32* %5, align 4
  %34 = icmp slt i32 %33, 0
  br i1 %34, label %35, label %39

35:                                               ; preds = %30
  %36 = load i32*, i32** %4, align 8
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @log_device_debug_errno(i32* %36, i32 %37, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.2, i64 0, i64 0))
  store i32 %38, i32* %2, align 4
  br label %40

39:                                               ; preds = %30
  store i32 0, i32* %2, align 4
  br label %40

40:                                               ; preds = %39, %35
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i64 @sd_device_get_devnum(i32*, i32*) #1

declare dso_local i32 @device_copy_properties(i32*, i32) #1

declare dso_local i32 @log_device_debug_errno(i32*, i32, i8*) #1

declare dso_local i32 @device_add_property(i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
